coral-component-shell/src/styles/index.styl
/**
 * Copyright 2019 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

$shell-header-height = 48px;

._coral-Shell {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

coral-shell-content {
  position: absolute;
  top: $shell-header-height;
  bottom: 0;
  left: 0;
  right: 0;

  -webkit-overflow-scrolling: touch;
}

@media screen and (max-width: 480px){
  coral-shell-content {
    overflow-x: hidden;
  }
}

@require 'header';
@require 'help';
@require 'menubar';
@require 'orgswitcher';
@require 'solutionswitcher';
@require 'selectlistswitcher';
@require 'user';
@require 'workspaces';

